--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "preact-render-to-string": "^6.4.0",
     "pretty-bytes": "^6.1.1",
     "pretty-time": "^1.1.0",
+    "punycode": "^2.3.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
